--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,19 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --text-color: #f1b2ce;
+  --special-text-color: #ff0070;
+  --accented-text-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header__sign {
+  display: block;
+}
+
+.theme-dark .header__theme-menu-button:hover {
+  outline: 1px solid rgb(255 0 112 / 0.4);
 }
