--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,39 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #fff1f7;
+  --accent-color: #ff8dcb;
+  --title-color: #ffc2e6;
+  --text-color: #353430;
+  --special-text-color: #353430;
+  --accented-text-color: #353430;
+  --bg-image: none;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header__sign {
+  display: none;
+}
+
+.theme-light .header__theme-menu-button:hover {
+  outline: 1px solid rgb(50 49 45 / 0.4);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --accent-color: #ff8dcb;
+    --title-color: #ffc2e6;
+    --text-color: #353430;
+    --special-text-color: #353430;
+    --accented-text-color: #353430;
+    --bg-image: none;
+  }
+
+  .header__sign {
+    display: none;
+  }
+
+  .header__theme-menu-button:hover {
+    outline: 1px solid rgb(50 49 45 / 0.4);
+  }
 }
