--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   color: var(--text-color, #f1b2ce);
-  font-family: var(--main-font, sans-serif);
+  font-family: var(--main-font, monospace);
   font-size: 18px;
   line-height: 130%;
   background-color: var(--bg-color, #000028);
@@ -28,8 +28,8 @@
   block-size: 25px;
   inset-inline-end: var(--outer-spacing, 10px);
   inset-block-start: var(--outer-spacing, 10px);
-  border-block-start: 1px solid var(--special-text-color);
-  border-inline-end: 1px solid var(--special-text-color);
+  border-block-start: 1px solid var(--special-text-color, #ff0070);
+  border-inline-end: 1px solid var(--special-text-color, #ff0070);
 }
 
 .decorated-zone::after {
@@ -39,8 +39,8 @@
   block-size: 25px;
   inset-inline-start: var(--outer-spacing, 10px);
   inset-block-end: var(--outer-spacing, 10px);
-  border-block-end: 1px solid var(--special-text-color);
-  border-inline-start: 1px solid var(--special-text-color);
+  border-block-end: 1px solid var(--special-text-color, #ff0070);
+  border-inline-start: 1px solid var(--special-text-color, #ff0070);
 }
 
 .header {
@@ -52,7 +52,7 @@
   block-size: 100vh;
   min-block-size: 668px;
   padding: var(--outer-spacing, 10px);
-  margin-block-end: var(--section-margin-y);
+  margin-block-end: var(--section-margin-y, 40px);
 }
 
 .header__sign {
@@ -63,7 +63,7 @@
   font-size: inherit;
   line-height: 139%;
   text-transform: uppercase;
-  color: var(--special-text-color);
+  color: var(--special-text-color, #ff0070);
 }
 
 .header__sign::after {
@@ -94,7 +94,7 @@
   font-family: var(--main-font, sans-serif);
   font-size: inherit;
   line-height: 100%;
-  color: var(--special-text-color);
+  color: var(--special-text-color, #ff0070);
   text-transform: lowercase;
   background-color: transparent;
   border: none;
@@ -107,7 +107,7 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid rgb(255 0 112 / 0.4);
+  outline: 1px solid var(--menu-btn-hover-color, rgb(255 0 112 / 0.4));
 }
 
 .header__theme-menu-button:focus {
@@ -135,11 +135,11 @@
   gap: 20px;
   padding-inline-start: var(--outer-spacing, 10px);
   padding-inline-end: var(--outer-spacing, 10px);
-  margin-block-end: var(--content-section-margin-y);
+  margin-block-end: var(--content-section-margin-y, 50px);
 }
 
 .content__section-title {
-  color: var(--special-text-color);
+  color: var(--special-text-color, #ff0070);
 }
 
 .content__section-item:not(:last-of-type) {
@@ -181,7 +181,7 @@
 .gallery {
   padding-inline-start: var(--outer-spacing, 10px);
   padding-inline-end: var(--outer-spacing, 10px);
-  margin-block-end: var(--section-margin-y);
+  margin-block-end: var(--section-margin-y, 40px);
 }
 
 .gallery__title {
@@ -290,6 +290,7 @@
 
   .gallery__image {
     object-fit: cover;
+    object-position: center;
     block-size: 100%;
   }
 
