--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
   --text-color: #f1b2ce;
   --special-text-color: #ff0070;
   --accented-text-color: #000028;
+  --menu-btn-hover-color: rgb(255 0 112 / 0.4);
   --bg-image: url(../images/cover-image-dark.png);
   --outer-spacing: 10px;
   --section-margin-y: 40px;
