--- a/styles/dark.css
+++ b/styles/dark.css
@@ -15,13 +15,10 @@
   --text-color: #f1b2ce;
   --special-text-color: #ff0070;
   --accented-text-color: #000028;
+  --menu-btn-hover-color: rgb(255 0 112 / 0.4);
   --bg-image: url(../images/cover-image-dark.png);
 }
 
 .theme-dark .header__sign {
   display: block;
-}
-
-.theme-dark .header__theme-menu-button:hover {
-  outline: 1px solid rgb(255 0 112 / 0.4);
 }
