--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --main-font: 'IBM Plex mono';
+  --main-font: 'IBM Plex mono', monospace;
   --bg-color: #000028;
   --accent-color: #ff0070;
   --title-color: #db00ff;
@@ -9,6 +9,20 @@
   --menu-btn-hover-color: rgb(255 0 112 / 0.4);
   --bg-image: url(../images/cover-image-dark.png);
   --outer-spacing: 10px;
+  /* или --main-gap */
   --section-margin-y: 40px;
   --content-section-margin-y: 50px;
+  /* В разборе:
+  --header-logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --footer-logo-size: ... */
 }
+
+
+/* В разборе сразу же тут медиазапрос:
+@media (width >= 768px) {
+  :root {
+    --main-gap: 20px;
+    --header-logo-size: clamp(...);
+    --footer-logo-size: clamp (...);
+  }  
+}*/
